[tool.poetry]
name = "sitemapdemo"
version = "0.1.0"
description = "demoforsitemap"
authors = ["Hewlbern <michael.t.holborn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
